--- a/shop/.env
+++ b/shop/.env
@@ -1,1 +1,8 @@
+// ---------------------------- DATABASE -------------------------------------------------------------------
 MONGODB_URL=mongodb+srv://kaiquebellmont:metallica123@cluster0.bvg1gxs.mongodb.net/shop?retryWrites=true&w=majority
+//----------------------------- NEXT AUTH ------------------------------------------------------------------
+JWT_SECRET=!QvqyBkTys?dUhd%?n-jdq*_4M4jUJVwrFYJS4FFwca_U7TUSc
+NEXTAUTH_URL=http://localhost:3000
+
+GITHUB_ID=2ab7dbd8c16e649b9537
+GITHUB_SECRET=bee2a3683cef7f6ba00cb365e87c3df8ce3711c4 
