Github and google login / fix console errors

--- a/shop/.env
+++ b/shop/.env
@@ -5,4 +5,7 @@ JWT_SECRET=!QvqyBkTys?dUhd%?n-jdq*_4M4jUJVwrFYJS4FFwca_U7TUSc
 NEXTAUTH_URL=http://localhost:3000
 
 GITHUB_ID=2ab7dbd8c16e649b9537
-GITHUB_SECRET=bee2a3683cef7f6ba00cb365e87c3df8ce3711c4 
+GITHUB_SECRET=bee2a3683cef7f6ba00cb365e87c3df8ce3711c4
+
+GOOGLE_ID=361338375952-g6ntb6u2c5odgi1ec1s3tib967p2u8dj.apps.googleusercontent.com
+GOOGLE_SECRET=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
