--- a/shop/.env
+++ b/shop/.env
@@ -9,3 +9,9 @@ GITHUB_SECRET=bee2a3683cef7f6ba00cb365e87c3df8ce3711c4
 
 GOOGLE_ID=361338375952-g6ntb6u2c5odgi1ec1s3tib967p2u8dj.apps.googleusercontent.com
 GOOGLE_SECRET=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
+
+TWITTER_ID=
+TWITTER_SECRET=
+
+FACEBOOK_CLIENT_ID=1266061340926678
+FACEBOOK_CLIENT_SECRET=060718f4aadacec192ebad077cf7041c
