--- a/shop/.env
+++ b/shop/.env
@@ -15,3 +15,7 @@ TWITTER_SECRET=
 
 FACEBOOK_CLIENT_ID=1266061340926678
 FACEBOOK_CLIENT_SECRET=060718f4aadacec192ebad077cf7041c
+
+AUTH0_CLIENT_ID=WJTX6GQkBDTkF40TmgrtifXSaRIBaxyu
+AUTH0_CLIENT_SECRET=NkIZtXnEv-sE6HVhu5bRioI9wJHpJyMmyub_y4bxTvZETjGSvAiLndde8_tQc1JF
+AUTH0_ISSUER=https://dev-ea02d1q88nynes63.us.auth0.com
