--- a/shop/package.json
+++ b/shop/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "formik": "^2.2.9",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
     "next": "13.1.6",
@@ -30,6 +31,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.58.0"
+    "sass": "^1.58.0",
+    "yup": "^1.0.0"
   }
 }
