almostt finishing the sendmail, but it works already

--- a/shop/.env
+++ b/shop/.env
@@ -2,7 +2,9 @@
 MONGODB_URL=mongodb+srv://kaiquebellmont:metallica123@cluster0.bvg1gxs.mongodb.net/shop?retryWrites=true&w=majority
 //----------------------------- NEXT AUTH ------------------------------------------------------------------
 JWT_SECRET=!QvqyBkTys?dUhd%?n-jdq*_4M4jUJVwrFYJS4FFwca_U7TUSc
+
 NEXTAUTH_URL=http://localhost:3000
+BASE_URL=http://localhost:3000
 
 GITHUB_ID=2ab7dbd8c16e649b9537
 GITHUB_SECRET=bee2a3683cef7f6ba00cb365e87c3df8ce3711c4
@@ -19,3 +21,14 @@ FACEBOOK_CLIENT_SECRET=060718f4aadacec192ebad077cf7041c
 AUTH0_CLIENT_ID=WJTX6GQkBDTkF40TmgrtifXSaRIBaxyu
 AUTH0_CLIENT_SECRET=NkIZtXnEv-sE6HVhu5bRioI9wJHpJyMmyub_y4bxTvZETjGSvAiLndde8_tQc1JF
 AUTH0_ISSUER=https://dev-ea02d1q88nynes63.us.auth0.com
+
+
+ACTIVATION_TOKEN_SECRET=!QvqyBkTys?dUhd%?n-jdq*_4M4jUJVwrFYJS4FFwca_U7TUScWLELÇWQELÇWQKÇEKWÇ
+
+
+MAILING_SERVICE_CLIENT_ID=1016575613766-h3ocao96uqfl9a2ep30g8gp6pno486c2.apps.googleusercontent.com
+MAILING_SERVICE_CLIENT_SECRET=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
+MAILING_SERVICE_REFRESH_TOKEN=1//04ev1fOPuFxXgCgYIARAAGAQSNwF-L9Irxe_LZz5LGSihu75VbnXgZ3mUtTN9YRVU2rmlhnQXehsT3Erk2KZy5DAMX-9AEtQK42Y
+SENDER_EMAIL_ADDRESS=kaiquebellmont@gmail.com
+
+OAUTH_PLAYGROUND=https://developers.google.com/oauthplayground
