signin, signup ready

--- a/shop/.env
+++ b/shop/.env
@@ -32,3 +32,7 @@ MAILING_SERVICE_REFRESH_TOKEN=1//04ev1fOPuFxXgCgYIARAAGAQSNwF-L9Irxe_LZz5LGSihu7
 SENDER_EMAIL_ADDRESS=kaiquebellmont@gmail.com
 
 OAUTH_PLAYGROUND=https://developers.google.com/oauthplayground
+
+
+ACTIVATION_TOKEN_SECRET=!QvqyBkTys?dUhd%?n-jdq*_4M4jUJVwrFYJS4FFwca_U7TUSc
+RESET_TOKEN_SECRET=!QvqyBkTys?dUhd%?n-jdq*_4M4jUJVwrFYJS4FFwca_U7TUSc
