--- a/shop/package.json
+++ b/shop/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
@@ -32,11 +33,14 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
+    "swiper": "^9.0.5",
     "yup": "^1.0.0"
   }
 }
