--- a/shop/package.json
+++ b/shop/package.json
@@ -46,6 +46,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
     "swiper": "^9.0.5",
-    "yup": "^1.0.0"
+    "yup": "^1.0.0",
+    "yup-phone": "^1.3.2"
   }
 }
