--- a/shop/package.json
+++ b/shop/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.14",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.6",
+    "@paypal/react-paypal-js": "^8.0.0",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
