--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.58.0",
+    "slugify": "^1.6.6",
     "swiper": "^9.0.5",
     "yup": "^1.0.0",
     "yup-phone": "^1.3.2"
