--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.14",
+    "@mui/x-date-pickers": "^6.9.1",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.6",
     "@paypal/react-paypal-js": "^8.0.0",
@@ -19,6 +21,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.3",
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
