--- a/package.json
+++ b/package.json
@@ -12,20 +12,24 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.11.14",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "@mui/x-date-pickers": "^6.9.1",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.6",
     "@paypal/react-paypal-js": "^8.0.0",
     "@redux-devtools/extension": "^3.2.5",
     "@reduxjs/toolkit": "^1.9.2",
-    "axios": "^1.3.3",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.3",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "eslint": "8.33.0",
     "eslint-config-next": "^12.0.4",
+    "express-fileupload": "^1.4.0",
     "formik": "^2.2.9",
     "googleapis": "^111.0.0",
     "jsonwebtoken": "^9.0.0",
@@ -37,6 +41,7 @@
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.1",
     "react": "18.2.0",
+    "react-color-extractor": "^1.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-image-magnify": "^2.1.1",
